<?xml version="1.0"?>
<package>
  <name>webots_ros</name>
  <version>2.0.0</version>
  <description>The ROS package containing examples for interfacing ROS with the standard ROS controller of Webots</description>

  <maintainer email="support@cyberbotics.com">Cyberbotics</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
