<?xml version="1.0"?>
<package>
  <name>ur_e_webots</name>
  <version>1.2.1</version>
  <description>
      Webots wrapper for the Universal UR5e robot arm.
  </description>


  <author>David Mansolino</author>
  <maintainer email="David.Mansolino@cyberbotics.com">David Mansolino</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/ur_e_webots</url>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>roslaunch</test_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>controller_manager</run_depend>


  <export>
  </export>
</package>
